# dsl

./: .gitignore  .gitmodules  AUTHORS.txt  CHANGELOG.txt  CMakeLists.txt  INSTALL.txt  LICENSE  LICENSE.txt  NOTICE.txt  README.md  README.txt
Builds/: dsl.groupproj  (+1 more)
Common/: CMakeLists.txt  cppFiles.txt  dslBaseProperty.cpp  dslBaseProperty.h  dslClassProperty.cpp  dslClassProperty.h  dslColor.cpp  dslColor.h  dslCommand.cpp  dslCommand.h  dslCommon.cpp  dslCommon.h  dslCommonExporter.h  dslCompareStrings.cpp  dslCompareStrings.h  dslCompilerSpecifics.h  dslConstants.cpp  dslConstants.h  dslException.cpp  dslException.h  dslFileSet.cpp  dslFileSet.h  dslFileUtils.cpp  dslFileUtils.h  dslGetOptions.cpp  dslGetOptions.h  dslIniFile.cpp  dslIniFile.h  dslIniFileProperties.cpp  dslIniFileProperties.h  dslIniKey.cpp  dslIniKey.h  dslIniSection.cpp  dslIniSection.h  dslLogFile.cpp  dslLogFile.h  dslLogLevel.cpp  dslLogLevel.h  dslLogOutput.cpp  dslLogOutput.h  (+57 more)
Common/archive/: dslDirectoryNotifier.cpp  dslDirectoryNotifier.h  dslFile.cpp  dslFile.h  dslFileFilter.cpp  dslFileFilter.h  dslFileInfo.cpp  dslFileInfo.h  dslFileName.cpp  dslFileName.h  dslFileWatcher.cpp  dslFileWatcher.h  dslOSSpecifics.cpp  dslOSSpecifics.h  dslPluginInformation.cpp  dslPluginInformation.h  dslReadDirectoryChangesHost.cpp  dslReadDirectoryChangesHost.h  dslReadDirectoryChangesWorker.cpp  dslReadDirectoryChangesWorker.h  dslTable.cpp  dslTable.h  dslTableRow.cpp  dslTableRow.h  dslToggler.h  dslXPlatformUtils.cpp  dslXPlatformUtils.h
DataBase/: CMakeLists.txt  DataBaseExporter.h  auto_link.cpp  dslSQLite.cpp  dslSQLite.h  dslSQLiteBinary.cpp  dslSQLiteBinary.h  dslSQLiteBuffer.cpp  dslSQLiteBuffer.h  dslSQLiteException.cpp  dslSQLiteException.h  dslSQLiteQuery.cpp  dslSQLiteQuery.h  dslSQLiteStatement.cpp  dslSQLiteStatement.h  dslSQLiteTable.cpp  dslSQLiteTable.h  dslSQLiteWrapper.cpp  dslSQLiteWrapper.h  resolve_unresolved_std_externals.cpp
DataProcessing/: CMakeLists.txt  DataExporter.h  auto_link.cpp  dslAbstractData.h  dslAxes.cpp  dslAxes.h  dslData.cpp  dslData.h  dslDataLibMain.cpp  dslDataLink.cpp  dslDataLink.h  dslDataOptions.cpp  dslDataOptions.h  dslDataProcess.h  dslDataProcessParameter.h  dslDataProcessProjections.cpp  dslDataProcessProperties.cpp  dslDataProcessProperties.h  dslDataProperties.cpp  dslDataProperties.h  dslDataReader.h  dslDataSliceInfo.cpp  dslDataSliceInfo.h  dslDataWriter.cpp  dslDataWriter.h  dslPhasing.cpp  dslPhasing.h  dslProcessProperties.cpp  dslProcessProperties.h  dslShowDataPart.cpp  dslShowDataPart.h
Examples/CXX/: CMakeLists.txt
Foundation/: CMakeLists.txt
IPC/: CMakeLists.txt  auto_link.cpp  dslIPCData.cpp  dslIPCData.h  dslIPCExporter.h  dslIPCMessage.cpp  dslIPCMessage.h  dslIPCMessageBuilder.cpp  dslIPCMessageBuilder.h  dslIPCMessageEnums.cpp  dslIPCMessageEnums.h  dslIPCMessageProcessor.cpp  dslIPCMessageProcessor.h  dslIPCReceiver.cpp  dslIPCReceiver.h  dslIPCServer.cpp  dslIPCServer.h  dslSocket.cpp  dslSocket.h  dslSocketActionThread.cpp  dslSocketActionThread.h  dslSocketClient.cpp  dslSocketClient.h  dslSocketReceiver.cpp  dslSocketReceiver.h  dslSocketServer.cpp  dslSocketServer.h  dslSocketWorker.cpp  dslSocketWorker.h  dslToggleSocketConnectionThread.cpp  dslToggleSocketConnectionThread.h
IPC/Archive/: dslIPC.cpp  dslIPCBroadCaster.cpp  dslIPCBroadCaster.h  dslIPCDataMessage.cpp  dslIPCDataMessage.h  dslIPCModule.cpp  dslIPCModule.h  dslIPCPipe.cpp  dslIPCPipe.h  dslIPCPipeClient.cpp  dslIPCPipeClient.h  dslIPCPipeServer.cpp  dslIPCPipeServer.h  dslIPCUtils.cpp  dslIPCUtils.h  dslIPCWorker.cpp  dslIPCWorker.h  dslLogClient.cpp  dslLogClient.h  dslLogMessageClientSender.cpp  dslLogMessageClientSender.h  dslLogMessageProcessor.cpp  dslLogMessageProcessor.h  dslMessageContainer.cpp  dslMessageContainer.h  dslToggleSocketConnectionThread.cpp
Math/: CMakeLists.txt  auto_link.cpp  dslAbstractMatrix.h  dslAbstractVector.h  dslAxisSystem.cpp  dslAxisSystem.h  dslDihedralAngle.cpp  dslDihedralAngle.h  dslEulerAngleTriplet.cpp  dslEulerAngleTriplet.h  dslEulerMatrix.cpp  dslEulerMatrix.h  dslMathExporter.h  dslMathUtils.cpp  dslMathUtils.h  dslMatrix.cpp  dslMatrix.h  dslNumberBuilder.cpp  dslNumberBuilder.h  dslPoint.cpp  dslPoint.h  dslPointSet.cpp  dslPointSet.h  dslRandom.cpp  dslRandom.h  dslVector.cpp  dslVector.h  dslVector3D.cpp  dslVector3D.h
Math/archive/: dslCSATensor.cpp  dslCSATensor.h  dslCellParameters.cpp  dslCellParameters.h  dslDirectDipolarCouplingTensor.cpp  dslDirectDipolarCouplingTensor.h  dslGaussianPeak.cpp  dslGaussianPeak.h  dslPeak.cpp  dslPeak.h  dslPowder.cpp  dslPowder.h
Math/mtrand/: CMakeLists.txt  mtrand.cpp  mtrand.h
Plugins/: CMakeLists.txt  dslPlugin.cpp  dslPlugin.h  dslPluginManager.cpp  dslPluginManager.h  dslPluginMetaData.cpp  dslPluginMetaData.h  dslPluginWithEvents.cpp  dslPluginWithEvents.h  dslPluginsExporter.h
PythonPlugins/: CMakeLists.txt  dslPythonInterpreter.cpp  dslPythonInterpreter.h  dslPythonInterpreterDSL.cpp  dslPythonInterpreterDSL.h  dslPythonPlugin.cpp  dslPythonPlugin.h  dslPythonPluginManager.cpp  dslPythonPluginManager.h  dslPythonPluginWorker.cpp  dslPythonPluginWorker.h  dslPythonPluginsExporter.h
VCL/Common/: CMakeLists.txt  dslApplicationInfo.cpp  dslApplicationInfo.h  dslApplicationLicenseController.cpp  dslApplicationLicenseController.h  dslApplicationProperties.cpp  dslApplicationProperties.h  dslFormSaver.cpp  dslFormSaver.h  dslGetRemoteTextFileDataThread.cpp  dslGetRemoteTextFileDataThread.h  dslLogFileReader.cpp  dslLogFileReader.h  dslProcess.cpp  dslProcess.h  dslRegistryProperties.cpp  dslRegistryProperties.h  dslRestartApplicationUtils.cpp  dslRestartApplicationUtils.h  dslTMemoLogger.cpp  dslTMemoLogger.h  dslTMemoSocketServer.cpp  dslTMemoSocketServer.h  dslTSaveFormToRegistry.cpp  dslTSaveFormToRegistry.h  dslTSplashMessageProcessor.cpp  dslTSplashMessageProcessor.h  dslVCLCommon.cpp  dslVCLCommonExporter.h  dslVCLUtils.cpp  dslVCLUtils.h
Wrappers/python/: CMakeLists.txt  dsl.i
redist/: CMakeLists.txt  boost_thread-bcb-mt-1_39  boost_thread-bcb-mt-d-1_39
(+345 files in other folders)
